# wypas-core

./: .envrc  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  wypas_core.cpp  wypas_core.hpp
.github/workflows/: build.yml
include/: astar.hpp  defs.hpp  item_type.hpp  items.hpp  map.hpp  position.hpp  tile.hpp
src/: astar.cpp  items.cpp  map.cpp  tile.cpp
tests/: test_astar.cpp  test_map.cpp  test_tile.cpp
